--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.1",
     "nodemailer": "^6.9.1",
-    "react-alert": "^7.0.3",
-    "react-alert-template-basic": "^1.0.2",
+    "stripe": "^11.16.0",
     "validator": "^13.9.0"
   }
 }
